--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -16,9 +16,25 @@
 
   <%# This adds a form on the Article show page that creates a new comment by calling the CommentsController create action.  %>
   <%# The form_with call here uses an array, which will build a nested route, such as /articles/1/comments. %>
+<br>
+<h2> Comments </h2>
+<% @article.comments.each do |comment| %>
+  <p>
+    <strong> Commentor: </strong>
+    <%= comment.commenter %>
+  </p>
 
-  <h2> Add a comment </h2>
-  <%= form_with model: [ @article, @article.comments.build ] do |form| %>
+  <p>
+    <strong> Comment: </strong>
+    <%= comment.body %>
+  </p>
+<% end %>
+
+
+<br>
+<br>
+<h2> Add a comment </h2>
+<%= form_with model: [ @article, @article.comments.build ] do |form| %>
     <p>
       <%= form.label :commenter %><br>
       <%= form.text_field :commenter %>
