Added Devise & fixed bugs

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,53 +1,21 @@
-<h2> THIS IS SHOW </h2>
 <h1><%= @article.title %></h1>
 
 <p><%= @article.body %></p>
 
 <ul>
   <li><%= link_to "Edit", edit_article_path(@article) %></li>
-  <li> <%= link_to "Delete", article_path(@article),
-        method: :delete,
-        data: { confirm: "Are you sure?"} %>
-  </li>
+  <li><%= link_to "Destroy", article_path(@article),
+                  method: :delete,
+                  data: { confirm: "Are you sure?" } %></li>
 </ul>
-  <%# Like with any blog, our readers will create their comments directly after reading the article, %>
-  <%# and once they have added their comment, will be sent back to the article show page to see their comment now listed.  %>
-  <%# Due to this, our CommentsController is there to provide a method to create comments and delete spam comments when they arrive. %>
 
-  <%# This adds a form on the Article show page that creates a new comment by calling the CommentsController create action.  %>
-  <%# The form_with call here uses an array, which will build a nested route, such as /articles/1/comments. %>
-<br>
-<h2> Comments </h2>
-<% @article.comments.each do |comment| %>
-  <p>
-    <strong> Commentor: </strong>
-    <%= comment.commenter %>
-  </p>
-
-  <p>
-    <strong> Comment: </strong>
-    <%= comment.body %>
-  </p>
-<% end %>
+<h2>Comments</h2>
+<%= render @article.comments %>
 
 
-<br>
-<br>
-<h2> Add a comment </h2>
-<%= form_with model: [ @article, @article.comments.build ] do |form| %>
-    <p>
-      <%= form.label :commenter %><br>
-      <%= form.text_field :commenter %>
-    </p>
+<h2>Add a comment:</h2>
+<%= render 'comments/form' %>
 
-    <p>
-      <%= form.label :body %>
-      <%= form.text_area :body %>
-    </p>
-
-    <p> <%= form.submit %> </p>
-
-<%end%>
 
 <%# end %>
 
