--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -16,6 +16,8 @@
 <h2>Add a comment:</h2>
 <%= render 'comments/form' %>
 
+<%#  Go home  %>
+<%# <%= link_to "Home", article_path(@all) %> %>
 
 <%# end %>
 
