--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,22 +1,29 @@
 <%= form_with model: @article do |form| %>
-  <div>
+  <%# <div> %>
+    <div class="mb-3">
+    <div class="field form-group">
     <%= form.label :title %><br>
     <%= form.text_field :title %>
     <% @article.errors.full_messages_for(:title).each do |message| %>
       <div><%= message %></div>
     <% end %>
   </div>
+  </div>
 
-  <div>
+  <div class="mb-3">
+  <div class="field form-group">
+  <%# <div> %>
     <%= form.label :body %><br>
     <%= form.text_area :body %><br>
     <% @article.errors.full_messages_for(:body).each do |message| %>
       <div><%= message %></div>
     <% end %>
   </div>
+  </div>
 
-  <div>
-    <%= form.submit %>
+  </br>
+  <div class="actions">
+    <%= form.submit class:'btn btn-secondary' %>
   </div>
 <% end %>
 
