--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,10 +3,8 @@
 <p><%= @article.body %></p>
 
 <ul>
-  <li><%= link_to "Edit", edit_article_path(@article) %></li>
-  <li><%= link_to "Destroy", article_path(@article),
-                  method: :delete,
-                  data: { confirm: "Are you sure?" } %></li>
+  <li><%= link_to "Edit", edit_article_path(@article.id) %></li>
+  <li><%= link_to "Destroy", article_path(@article), method: :delete, class: 'btn btn-primary', data: { confirm: 'Deseja confirmar a exclusão do post?' }  %></li>
 </ul>
 
 <h2>Comments</h2>
