--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,52 @@
-<!DOCTYPE html>
+<%# <!DOCTYPE html>
 <html>
   <head>
-    <title>Mubariz's Blog</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+    <title>Mubariz's Blog</title> %>
+    <%# <meta name="viewport" content="width=device-width,initial-scale=1"> %>
+    <%# <%= csrf_meta_tags %>
+    <%# <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+    <%# <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%# <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <%# </head>
 
   <body>
 
+  <h1>header here</h1> %>
+    <%# <%= yield %>
+  <%# <h1>footer here</h1>
 
-    <%= yield %>
+  </body>
+</html> %>
+
+
+
+<html lang="en">
+
+  <head>
+    <title>Mubariz's Blog</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
+    <title>Bootstrap demo</title>
+    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  </head>
+  <body>
+
+
+      <%# <h1>header here</h1> %>
+      <%= render 'articles/header' %>
+    <div class = "container">
+      </br>
+      <%= yield %>
+    </div>
+    <h1>footer here</h1>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+
+  <%# <%= render 'articles/footer' %>
   </body>
 </html>
+
