adding likes controller and updations

--- a/app/views/articles/_header.html.erb
+++ b/app/views/articles/_header.html.erb
@@ -18,6 +18,10 @@
            <%= link_to "Pay Money!", payment_invoices_path, class:"nav-link" %>
          </li>
 
+         <li class="nav-item">
+           <%= link_to "user profile!",  user_path , class:"nav-link" %>
+         </li>
+
           <% if user_signed_in? %>
         <li class="nav-item">
           <%= link_to "Add Article", new_article_path, class:"nav-link" %>
