--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,6 +5,7 @@
 <ul>
   <li><%= link_to "Edit", edit_article_path(@article.id) %></li>
   <li><%= link_to "Destroy", article_path(@article), method: :delete, class: 'btn btn-primary', data: { confirm: 'Deseja confirmar a exclusão do post?' }  %></li>
+  <li><%= link_to "Archive", archive_article_path(@article.id) %></li>
 </ul>
 
 <h2>Comments</h2>
