added comment updation using form_for tags

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,9 +1,14 @@
 <p>
+  <%= comment.id%>
   <strong>Commenter:</strong>
   <%= comment.commenter %>
 </p>
 
 <p>
-  <strong>Comment:</strong>
+  <strong>Comment: </strong>
   <%= comment.body %>
 </p>
+
+<ul>
+<li><%= link_to "edit article comment",  edit_article_comment_path(comment.id) %></li>
+</ul>
