--- a/app/views/articles/_header.html.erb
+++ b/app/views/articles/_header.html.erb
@@ -2,7 +2,7 @@
 
  <nav class="navbar navbar-expand-xxl navbar-dark bg-dark">
     <div class="container-fluid">
-       <%= link_to 'Mubarizs Blog', articles_path, class:"navbar-brand" %>
+       <%= link_to @user_id, articles_path, class:"navbar-brand" %>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExampleXxl" aria-controls="navbarsExampleXxl" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
