--- a/app/views/articles/_header.html.erb
+++ b/app/views/articles/_header.html.erb
@@ -19,7 +19,7 @@
          </li>
 
          <li class="nav-item">
-           <%= link_to "user profile!",  user_path , class:"nav-link" %>
+           <%= link_to "user profile!",  users_path , class:"nav-link" %>
          </li>
 
           <% if user_signed_in? %>
