Ajax is working

--- a/app/views/users/destroy.js.erb
+++ b/app/views/users/destroy.js.erb
@@ -1,7 +1,10 @@
 
 $('.destroy').bind('ajax:success', function() {
 	$(this).closest('li').remove();
+
+	alert("This is an alert message!");
+	<% byebug %>
 });
 
 <%# debugger %>
-<%# <% byebug %> %>
+
