--- a/app/views/payment/invoices/index.html.erb
+++ b/app/views/payment/invoices/index.html.erb
@@ -7,8 +7,31 @@
   <li>
     <%= link_to "invoice.id: ".concat(invoice.id.to_s),   payment_invoice_path(invoice)  %>
   </li>
+</ul>
+<% end %>
     <%# <li></li> %>
 
-  <% end %>
 
-</ul>
+    <table class="table">
+  <thead>
+    <tr>
+
+      <th scope="col">ID</th>
+      <th scope="col">Username</th>
+      <th scope="col">amount</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @invoices.each do |invoice|%>
+    <tr>
+       <td> <%= invoice.id %> </td>
+       <td> <%= invoice.username %> </td>
+       <td> <%= invoice.amount %> </td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
+
+
+
