--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,8 +1,8 @@
 
 <h1> New Article !!!! </h1>
 
-<%# <% The form_with helper method instantiates a form builder. %> %>
-<%# <% In the form_with block we call methods like label and text_field  %> %>
+<%# <% The form_with helper method instantiates a form builder. %>
+<%# <% In the form_with block we call methods like label and text_field  %>
 <%# on the form builder to output the appropriate form elements. %>
 
 <%# The full_messages_for method returns an array of user-friendly error messages for a specified attribute.  %>
