--- a/app/views/payment/invoices/index.html.erb
+++ b/app/views/payment/invoices/index.html.erb
@@ -5,7 +5,8 @@
 <ul>
   <% @invoices.each do |invoice|%>
   <li>
-    <%= link_to "invoice.id: ".concat(invoice.id.to_s),   payment_invoice_path(invoice)  %>
+    <%# <%= link_to "invoice.id: ".concat(invoice.id.to_s),   payment_invoice_path(invoice)  %> %>
+    <%= link_to "Create new invoice",   new_payment_invoice_path  %>
   </li>
 </ul>
 <% end %>
