--- a/app/views/articles/_header.html.erb
+++ b/app/views/articles/_header.html.erb
@@ -10,9 +10,14 @@
 
       <div class="collapse navbar-collapse" id="navbarsExampleXxl">
         <ul class="navbar-nav me-auto mb-2 mb-xl-0">
+
           <li class="nav-item">
             <%= link_to "About Us", articles_path, class:"nav-link" %>
           </li>
+
+          <li class="nav-item">
+           <%= link_to "Article topics", topics_path, class:"nav-link" %>
+         </li>
 
            <li class="nav-item">
            <%= link_to "Pay Money!", payment_invoices_path, class:"nav-link" %>
