--- a/app/views/topics/create.js.erb
+++ b/app/views/topics/create.js.erb
@@ -1,2 +1,2 @@
-var users = document.querySelector("#topic");
+var topics = document.querySelector("#topic");
 users.insertAdjacentHTML("beforeend", "<%= j render(@topic) %>");
