updation before Ajax working for addition of topic names

--- a/app/views/topics/create.js.erb
+++ b/app/views/topics/create.js.erb
@@ -1,2 +1,4 @@
 var topics = document.querySelector("#topic");
-users.insertAdjacentHTML("beforeend", "<%= j render(@topic) %>");
+topics.insertAdjacentHTML("beforeend", "<%= j render(@topic) %>");
+
+
