Ajax updation w/o remote=> true solved but topic_name not being inserted in model, nill being inserted instead

--- a/app/views/topics/create.js.erb
+++ b/app/views/topics/create.js.erb
@@ -1,4 +1,7 @@
 var topics = document.querySelector("#topic");
 topics.insertAdjacentHTML("beforeend", "<%= j render(@topic) %>");
+<%# console.log("hhhhhhhhhhhhhhhhhhhhhhhhhhhhhh"); %>
+
+<%# var a = 123; %>
 
 
