--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -7,11 +7,14 @@
 </ul>
 
 
-
-
-<%= form_with model: @topic do |form| %>
-  <%= form.label :topicname %><br>
-  <%= form.text_field :topic_name %>
-  <%= form.submit  %>
+<%# class: "remove_user" %>
+<%# data :{topic_name :topic_name} %>
+<%# ,method::post %>
+<%= form_with model: @topic  do |form| %>
+  <%= form.label :"topic Name" %><br>
+  <%= form.text_field :topic_name, class:'add_topic', data: {tp: :topic_name }  %>
+  <%= form.submit :topic_name, :class=>"topic_button"%>
 <% end %>
+
+<%= javascript_pack_tag 'create' %>
 
