--- a/app/views/likes/_form.html.erb
+++ b/app/views/likes/_form.html.erb
@@ -11,16 +11,13 @@
       </form>
 
       <% else %>
-      <form action ="<%= like_path(like) %>" method="post">
+      <form action ="<%= article_like_path(@article) %>" method="post">
           <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token%>">
           <input type="hidden" name="_method" value="DELETE">
-          <input type="submit" value="UNLike">
+          <input type="submit" value="UNLike To fixx">
       </form>
 
-      <div class="field">
-      <%= form.hidden_field :user_id, value: current_user.id %>
-      <%= form.hidden_field :article_id, value: @article.id %>
-      </div>
+
 
 
 
