--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,6 +2,11 @@
 
 <p><%= @article.body %></p>
 
+<% @article.title  %>
+<%# <% @article.save%>
+<%# <h1><%= @article.title_was? %></h1> %>
+
+
 <ul>
   <li><%= link_to "Edit", edit_article_path(@article.id) %></li>
   <li><%= link_to "Destroy", article_path(@article), method: :delete, class: 'btn btn-primary', data: { confirm: 'Deseja confirmar a exclusão do post?' }  %></li>
