--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,8 +1,9 @@
 <h1> hi, this is the edit comment form </h1>
 
 <%# <%= @article.id %>
-<%= @comment.id %>
-<%= @comment.commenter %>
-<%= @comment.body %>
+<%# <%= @comment.id %> %>
+<%# <%= @comment.commenter %> %>
+<%# <%= @comment.body %> %>
+
 
 <%= render 'editform', comment: @comment %>
