--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -19,7 +19,7 @@
 
 </ul>
 
-<a href="#" class="btn btn-primary">ew <i class="far fa-thumbs-up"></i></a>
+<%# <a href="#" class="btn btn-primary">ew <i class="far fa-thumbs-up"></i></a> %>
 
 
 <%= link_to "New Article", new_article_path %>
